tests/miniJava/neg/000187_mutation.MiniJava
class java { public static 0 void Main ( String [ ] java ) { { } } }
